--- a/01 Proposals/index.html
+++ b/01 Proposals/index.html
@@ -1,73 +1,419 @@
-<!doctype html>
-<html lang="en">
-
+<!DOCTYPE html>
+<html lang="th">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>KueKan Proposal</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/github-markdown-css@5/github-markdown.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>KueKan Proposal Preview</title>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        .markdown-body {
+        :root {
+            --primary: #4F46E5;
+            --primary-light: #818CF8;
+            --bg: #FAFAFA;
+            --card-bg: #FFFFFF;
+            --text: #1F2937;
+            --text-muted: #6B7280;
+            --border: #E5E7EB;
+            --success: #10B981;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
             box-sizing: border-box;
-            min-width: 200px;
-            max-width: 980px;
-            margin: 0 auto;
-            padding: 45px;
         }
 
-        @media (max-width: 767px) {
-            .markdown-body {
-                padding: 15px;
-            }
+        body {
+            font-family: 'IBM Plex Sans Thai', 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+            background: var(--bg);
+            color: var(--text);
+            line-height: 1.8;
         }
 
-        /* Mermaid styling adjustment */
-        .mermaid {
+        /* Header */
+        .header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            background: var(--card-bg);
+            border-bottom: 1px solid var(--border);
+            padding: 12px 24px;
             display: flex;
-            justify-content: center;
-            background-color: transparent;
+            align-items: center;
+            justify-content: space-between;
+            z-index: 100;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+        }
+
+        .header-left {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+        }
+
+        .logo {
+            font-size: 20px;
+            font-weight: 700;
+            color: var(--primary);
+        }
+
+        .file-name {
+            font-size: 14px;
+            color: var(--text-muted);
+            padding: 4px 12px;
+            background: var(--bg);
+            border-radius: 4px;
+        }
+
+        .status {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            font-size: 13px;
+            color: var(--text-muted);
+        }
+
+        .status-dot {
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            background: var(--success);
+            animation: pulse 2s infinite;
+        }
+
+        @keyframes pulse {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0.5; }
+        }
+
+        .refresh-btn {
+            padding: 8px 16px;
+            background: var(--primary);
+            color: white;
+            border: none;
+            border-radius: 6px;
+            font-size: 14px;
+            font-weight: 500;
+            cursor: pointer;
+            transition: background 0.2s;
+        }
+
+        .refresh-btn:hover {
+            background: var(--primary-light);
+        }
+
+        /* Main Content */
+        .container {
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 100px 24px 60px;
+        }
+
+        .content {
+            background: var(--card-bg);
+            border-radius: 12px;
+            padding: 48px 56px;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.08);
+        }
+
+        /* Markdown Styles */
+        .content h1 {
+            font-size: 32px;
+            font-weight: 700;
+            margin-bottom: 8px;
+            color: var(--primary);
+            padding-bottom: 16px;
+            border-bottom: 3px solid var(--primary);
+        }
+
+        .content h2 {
+            font-size: 24px;
+            font-weight: 600;
+            margin-top: 48px;
+            margin-bottom: 20px;
+            color: var(--text);
+            padding-bottom: 8px;
+            border-bottom: 1px solid var(--border);
+        }
+
+        .content h3 {
+            font-size: 18px;
+            font-weight: 600;
+            margin-top: 32px;
+            margin-bottom: 12px;
+            color: var(--text);
+        }
+
+        .content h4 {
+            font-size: 16px;
+            font-weight: 600;
+            margin-top: 24px;
+            margin-bottom: 8px;
+            color: var(--text-muted);
+        }
+
+        .content p {
+            margin-bottom: 16px;
+            color: var(--text);
+        }
+
+        .content ul, .content ol {
+            margin-bottom: 16px;
+            padding-left: 24px;
+        }
+
+        .content li {
+            margin-bottom: 8px;
+        }
+
+        .content strong {
+            font-weight: 600;
+            color: var(--text);
+        }
+
+        .content em {
+            font-style: italic;
+        }
+
+        .content blockquote {
+            border-left: 4px solid var(--primary);
+            padding-left: 20px;
+            margin: 20px 0;
+            color: var(--text-muted);
+            font-style: italic;
+            background: var(--bg);
+            padding: 16px 20px;
+            border-radius: 0 8px 8px 0;
+        }
+
+        .content code {
+            background: var(--bg);
+            padding: 2px 6px;
+            border-radius: 4px;
+            font-family: 'Monaco', 'Consolas', monospace;
+            font-size: 14px;
+        }
+
+        .content pre {
+            background: #1F2937;
+            color: #F9FAFB;
+            padding: 20px;
+            border-radius: 8px;
+            overflow-x: auto;
+            margin: 20px 0;
+        }
+
+        .content pre code {
+            background: none;
+            padding: 0;
+            color: inherit;
+        }
+
+        .content table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 24px 0;
+            font-size: 14px;
+        }
+
+        .content th {
+            background: var(--primary);
+            color: white;
+            padding: 12px 16px;
+            text-align: left;
+            font-weight: 600;
+        }
+
+        .content th:first-child {
+            border-radius: 8px 0 0 0;
+        }
+
+        .content th:last-child {
+            border-radius: 0 8px 0 0;
+        }
+
+        .content td {
+            padding: 12px 16px;
+            border-bottom: 1px solid var(--border);
+        }
+
+        .content tr:hover td {
+            background: var(--bg);
+        }
+
+        .content tr:last-child td:first-child {
+            border-radius: 0 0 0 8px;
+        }
+
+        .content tr:last-child td:last-child {
+            border-radius: 0 0 8px 0;
+        }
+
+        .content hr {
+            border: none;
+            border-top: 2px solid var(--border);
+            margin: 40px 0;
+        }
+
+        .content a {
+            color: var(--primary);
+            text-decoration: none;
+        }
+
+        .content a:hover {
+            text-decoration: underline;
+        }
+
+        .content img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+            margin: 20px 0;
+        }
+
+        /* Loading State */
+        .loading {
+            text-align: center;
+            padding: 60px;
+            color: var(--text-muted);
+        }
+
+        .loading-spinner {
+            width: 40px;
+            height: 40px;
+            border: 3px solid var(--border);
+            border-top-color: var(--primary);
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+            margin: 0 auto 16px;
+        }
+
+        @keyframes spin {
+            to { transform: rotate(360deg); }
+        }
+
+        /* Error State */
+        .error {
+            background: #FEF2F2;
+            color: #DC2626;
+            padding: 20px;
+            border-radius: 8px;
+            text-align: center;
+        }
+
+        /* Footer */
+        .footer {
+            text-align: center;
+            padding: 24px;
+            color: var(--text-muted);
+            font-size: 13px;
+        }
+
+        /* Print Styles */
+        @media print {
+            .header {
+                display: none;
+            }
+            .container {
+                padding-top: 0;
+            }
+            .content {
+                box-shadow: none;
+            }
         }
     </style>
 </head>
+<body>
+    <header class="header">
+        <div class="header-left">
+            <span class="logo">KueKan</span>
+            <span class="file-name">Proposal_KueKan_PAO_NCC_McKinsey-Shorten.md</span>
+        </div>
+        <div class="status">
+            <span class="status-dot"></span>
+            <span id="status-text">Auto-refresh: ON (3s)</span>
+            <button class="refresh-btn" onclick="loadMarkdown()">Refresh Now</button>
+        </div>
+    </header>
 
-<body class="markdown-body">
+    <main class="container">
+        <div class="content" id="content">
+            <div class="loading">
+                <div class="loading-spinner"></div>
+                <p>Loading markdown...</p>
+            </div>
+        </div>
+    </main>
 
-    <!-- 
-      no-shadow: Render in Light DOM so global CSS works.
-    -->
-    <zero-md src="Proposal_KueKan_PAO_NCC_McKinsey-Shorten.md" no-shadow></zero-md>
+    <footer class="footer">
+        <p>KueKan Proposal Preview | Digitalmedia Outsource Solution Co., Ltd.</p>
+    </footer>
 
-    <script type="module">
-        import 'https://cdn.jsdelivr.net/gh/zerodevx/zero-md@3/dist/zero-md.min.js';
-        import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
+    <script>
+        const MARKDOWN_FILE = 'Proposal_KueKan_PAO_NCC_McKinsey-Shorten.md';
+        const REFRESH_INTERVAL = 3000; // 3 seconds
+        let lastContent = '';
+        let refreshTimer = null;
 
-        mermaid.initialize({ startOnLoad: false, theme: 'default' });
+        // Configure marked options
+        marked.setOptions({
+            breaks: true,
+            gfm: true
+        });
 
-        const app = document.querySelector('zero-md');
-
-        app.addEventListener('zero-md-rendered', async () => {
-            // 1. Find all mermaid code blocks
-            const nodes = document.querySelectorAll('pre > code.language-mermaid');
-
-            // 2. Convert them to divs for Mermaid processing
-            for (const node of nodes) {
-                const pre = node.parentElement;
-                const div = document.createElement('div');
-                div.classList.add('mermaid');
-                div.textContent = node.textContent;
-                pre.replaceWith(div);
-            }
-
-            // 3. Render diagrams
+        async function loadMarkdown() {
             try {
-                await mermaid.run({
-                    querySelector: '.mermaid'
-                });
-            } catch (e) {
-                console.error('Mermaid rendering failed:', e);
+                // Add cache-busting parameter
+                const response = await fetch(MARKDOWN_FILE + '?t=' + Date.now());
+
+                if (!response.ok) {
+                    throw new Error('Failed to load file: ' + response.status);
+                }
+
+                const markdown = await response.text();
+
+                // Only update if content changed
+                if (markdown !== lastContent) {
+                    lastContent = markdown;
+                    const html = marked.parse(markdown);
+                    document.getElementById('content').innerHTML = html;
+
+                    // Update status
+                    const now = new Date().toLocaleTimeString('th-TH');
+                    document.getElementById('status-text').textContent = `Updated: ${now} | Auto-refresh: ON (3s)`;
+                }
+            } catch (error) {
+                console.error('Error loading markdown:', error);
+                document.getElementById('content').innerHTML = `
+                    <div class="error">
+                        <h3>Error Loading File</h3>
+                        <p>${error.message}</p>
+                        <p style="margin-top: 12px; font-size: 13px;">
+                            Make sure you're running this through a local web server.<br>
+                            Try: <code>python3 -m http.server 8000</code> or use VS Code Live Server
+                        </p>
+                    </div>
+                `;
+            }
+        }
+
+        // Initial load
+        loadMarkdown();
+
+        // Auto-refresh
+        refreshTimer = setInterval(loadMarkdown, REFRESH_INTERVAL);
+
+        // Keyboard shortcut: Cmd/Ctrl + R to refresh
+        document.addEventListener('keydown', (e) => {
+            if ((e.metaKey || e.ctrlKey) && e.key === 'r') {
+                e.preventDefault();
+                loadMarkdown();
             }
         });
     </script>
 </body>
-
 </html>
