--- a/01 Proposals/index.html
+++ b/01 Proposals/index.html
@@ -62,6 +62,14 @@
             color: var(--primary);
         }
 
+        .subtitle {
+            font-size: 13px;
+            color: var(--text-muted);
+            padding: 4px 12px;
+            background: var(--bg);
+            border-radius: 4px;
+        }
+
         .download-btn {
             display: flex;
             align-items: center;
@@ -367,6 +375,7 @@
     <header class="header">
         <div class="header-left">
             <span class="logo">KueKan</span>
+            <span class="subtitle">Document preview by Digitalmedia Outsource Solution</span>
         </div>
         <button class="download-btn" onclick="downloadPDF()">
             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
