Update document preview subtitle text from 'Document preview by' to 'Crafted by'.

--- a/01 Proposals/index.html
+++ b/01 Proposals/index.html
@@ -447,7 +447,7 @@
         function initPage() {
             document.title = `${CONFIG.PROJECT_NAME} - Document Preview`;
             document.getElementById('logo').textContent = CONFIG.PROJECT_NAME;
-            document.getElementById('subtitle').textContent = `Document preview by ${CONFIG.COMPANY_NAME}`;
+            document.getElementById('subtitle').textContent = `Crafted by ${CONFIG.COMPANY_NAME}`;
             document.getElementById('footer-text').textContent = `${CONFIG.PROJECT_NAME} Document Preview | ${CONFIG.COMPANY_FULL}`;
         }
 
