--- a/01 Proposals/index.html
+++ b/01 Proposals/index.html
@@ -358,6 +358,144 @@
             height: auto;
         }
 
+        /* Mobile Responsive */
+        @media screen and (max-width: 768px) {
+            .header {
+                padding: 10px 16px;
+                flex-wrap: wrap;
+                gap: 10px;
+            }
+
+            .header-left {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 4px;
+            }
+
+            .logo {
+                font-size: 18px;
+            }
+
+            .subtitle {
+                font-size: 11px;
+                padding: 2px 8px;
+            }
+
+            .download-btn {
+                padding: 8px 14px;
+                font-size: 13px;
+            }
+
+            .download-btn span {
+                display: none;
+            }
+
+            .container {
+                padding: 90px 12px 40px;
+            }
+
+            .content {
+                padding: 24px 20px;
+                border-radius: 8px;
+            }
+
+            .content h1 {
+                font-size: 24px;
+            }
+
+            .content h2 {
+                font-size: 20px;
+                margin-top: 32px;
+            }
+
+            .content h3 {
+                font-size: 16px;
+                margin-top: 24px;
+            }
+
+            .content h4 {
+                font-size: 14px;
+            }
+
+            .content p,
+            .content li {
+                font-size: 14px;
+            }
+
+            .content table {
+                font-size: 12px;
+                display: block;
+                overflow-x: auto;
+                white-space: nowrap;
+            }
+
+            .content th,
+            .content td {
+                padding: 8px 10px;
+            }
+
+            .content blockquote {
+                padding: 12px 16px;
+                font-size: 14px;
+            }
+
+            .content aside {
+                padding: 16px 18px;
+                font-size: 13px;
+            }
+
+            .content pre {
+                padding: 14px;
+                font-size: 12px;
+            }
+
+            .mermaid {
+                padding: 16px;
+                margin: 16px 0;
+            }
+
+            .footer {
+                font-size: 11px;
+                padding: 16px;
+            }
+        }
+
+        /* Extra small devices */
+        @media screen and (max-width: 480px) {
+            .header-left {
+                max-width: 60%;
+            }
+
+            .subtitle {
+                font-size: 10px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                max-width: 100%;
+            }
+
+            .content {
+                padding: 20px 16px;
+            }
+
+            .content h1 {
+                font-size: 20px;
+            }
+
+            .content h2 {
+                font-size: 18px;
+            }
+
+            .content table {
+                font-size: 11px;
+            }
+
+            .content th,
+            .content td {
+                padding: 6px 8px;
+            }
+        }
+
         /* Print Styles */
         @media print {
             * {
