style: Adjust download button padding, add gap, and hide after pseudo-element.

--- a/01 Proposals/index.html
+++ b/01 Proposals/index.html
@@ -383,14 +383,19 @@
             }
 
             .download-btn {
-                padding: 8px 12px;
+                padding: 10px;
                 font-size: 0;
                 flex-shrink: 0;
+                gap: 0;
             }
 
             .download-btn svg {
                 width: 18px;
                 height: 18px;
+            }
+
+            .download-btn::after {
+                display: none;
             }
 
             .container {
