refactor: Rename `Proposal_KueKan_PAO_NCC_McKinsey-Shorten.md` to `Proposal-KueKan.md` and update `index.html` reference.

--- a/01 Proposals/index.html
+++ b/01 Proposals/index.html
@@ -575,7 +575,7 @@
             PROJECT_NAME: 'KueKan',
             COMPANY_NAME: 'Digitalmedia Outsource Solution',
             COMPANY_FULL: 'Digitalmedia Outsource Solution Co., Ltd.',
-            MARKDOWN_FILE: 'Proposal_KueKan_PAO_NCC_McKinsey-Shorten.md',
+            MARKDOWN_FILE: 'Proposal-KueKan.md',
             REFRESH_INTERVAL: 3000, // milliseconds
         };
         // =====================================================
